Fixed alignment of open bar button

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -65,9 +65,9 @@ button:focus {
     background-size: cover;
     background-position: center;
     font-size: 50px;
-    height: 400px;
 
     .flavor-text {
+      padding-bottom: 100px;
       text-align: center;
       h2 {
         margin-top: 25px;
@@ -263,6 +263,10 @@ button:focus {
 
       .text-cont {
         margin-right: auto;
+      }
+
+      .open-bar-container {
+        text-align: center;
       }
     }
 
